--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "country-region-data": "^3.1.0",
-    "framer-motion": "^11.15.0",
     "lucide-react": "^0.462.0",
     "mongodb": "^6.11.0",
+    "motion": "^11.16.0",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "next-themes": "^0.4.4",
