--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@types/next-auth": "^3.13.0",
+    "body-parser": "^1.20.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "country-region-data": "^3.1.0",
+    "express": "^4.21.2",
     "lucide-react": "^0.462.0",
     "mongodb": "^6.11.0",
     "motion": "^11.16.0",
