--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
