--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cmdk": "^1.0.0",
     "country-region-data": "^3.1.0",
     "express": "^4.21.2",
+    "i18n-iso-countries": "^7.13.0",
     "lucide-react": "^0.462.0",
     "mongodb": "^6.11.0",
     "motion": "^11.16.0",
