--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cmdk": "^1.0.0",
     "country-region-data": "^3.1.0",
     "express": "^4.21.2",
+    "firebase": "^11.2.0",
     "i18n-iso-countries": "^7.13.0",
     "lucide-react": "^0.462.0",
     "mongodb": "^6.11.0",
