--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0",
     "react-phone-number-input": "^3.4.10",
+    "react-photo-view": "^1.2.7",
     "sonner": "^1.7.1",
     "swr": "^2.3.0",
     "tailwind-merge": "^2.5.5",
