--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "country-region-data": "^3.1.0",
     "express": "^4.21.2",
     "firebase": "^11.2.0",
+    "framer-motion": "^12.0.1",
     "i18n-iso-countries": "^7.13.0",
     "lucide-react": "^0.462.0",
     "mongodb": "^6.11.0",
@@ -53,7 +54,7 @@
     "react-photo-view": "^1.2.7",
     "sonner": "^1.7.1",
     "swr": "^2.3.0",
-    "tailwind-merge": "^2.5.5",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
